# Illidan

./: README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: jcvd.html
app/src/main/cpp/: com_mt_mtxx_image_JNI.h  helloworld.c  native-lib.cpp
app/src/main/res/anim/: rb_anim.xml
app/src/main/res/drawable/: btn_normal_selector.xml  btn_orange_selector.xml  btn_orange_shape_selector.xml  ic_delete_selector.xml  ic_history_selector.xml  ic_menu_selector.xml  ic_share_selector.xml  imgbtn_back_selector.xml  my_toggle_button_bg.xml  my_toggle_button_slide_button.xml  rb_bottom_text_selector.xml  rb_common_frame_selector.xml  rb_custom_selector.xml  rb_other_selector.xml  rb_thirdparty_selector.xml  selected_radius.xml
app/src/main/res/layout/: activity_banner_main.xml  activity_banner_style.xml  activity_butterknife.xml  activity_custom_banner.xml  activity_drag_bubble.xml  activity_event_bus.xml  activity_event_bus_send.xml  activity_event_bus_sticky.xml  activity_fresco.xml  activity_fresco_with_circular.xml  activity_fresco_with_cut.xml  activity_fresco_with_gif.xml  activity_fresco_with_listener.xml  activity_fresco_with_plural.xml  activity_fresco_with_progress.xml  activity_imageloader.xml  activity_indicator_position.xml  activity_jie_cao_video_player_main.xml  activity_jni.xml  activity_launcher.xml  activity_main.xml  activity_mtxx.xml  activity_native_json_prase.xml  activity_okhttp.xml  activity_okhttplist.xml  activity_record_video.xml  activity_recyclerview.xml  activity_setting.xml  activity_swipe_to_load_recyclerview.xml  activity_ui_small_change.xml  activity_youku_menu.xml  activity_zoom_list.xml  fragment_common_frame.xml  item_dragbubblelist.xml  item_recyclerview.xml  (+6 more)
(+91 files in other folders)
